# Motor-driver-firmware-test-bench

./: CMakeLists.txt  README.md  avr-toolchain.cmake
Motor_Driver_Programmer/Motor_Driver_Programmer/: eeprom_values_motor_1.txt  Инструкция.txt
Motor_Driver_Programmer/Motor_Driver_Programmer/Motor_Driver_Parameters/_internal/flask-3.1.2.dist-info/: RECORD
ReadFiles/: My Hex Changed.txt
ReadFiles/Problems/: MyHexDefault.txt  MyHex_Changed_By_HeliSuite.txt
include/: adc_.h  c2.h  define.h  dshot.h  gpio.h  isr.h  timer.h  usart.h
include/AVR_library/avr/include/util/: delay.h
src/: adc_.c  c2.c  dshot.c  gpio.c  isr.c  main.c  timer.c  usart.c
